// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cascader can be selected 1`] = `
<div>
  <div
    class="wmstool-cascader-menus  wmstool-cascader-menus-placement-bottomLeft "
  >
    <div>
      <ul
        class="wmstool-cascader-menu"
      >
        <li
          class="wmstool-cascader-menu-item wmstool-cascader-menu-item-expand wmstool-cascader-menu-item-active"
          title="Zhejiang"
        >
          Zhejiang
        </li>
        <li
          class="wmstool-cascader-menu-item wmstool-cascader-menu-item-expand"
          title="Jiangsu"
        >
          Jiangsu
        </li>
      </ul>
      <ul
        class="wmstool-cascader-menu"
      >
        <li
          class="wmstool-cascader-menu-item wmstool-cascader-menu-item-expand"
          title="Hangzhou"
        >
          Hangzhou
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected 2`] = `
<div>
  <div
    class="wmstool-cascader-menus  wmstool-cascader-menus-placement-bottomLeft "
  >
    <div>
      <ul
        class="wmstool-cascader-menu"
      >
        <li
          class="wmstool-cascader-menu-item wmstool-cascader-menu-item-expand wmstool-cascader-menu-item-active"
          title="Zhejiang"
        >
          Zhejiang
        </li>
        <li
          class="wmstool-cascader-menu-item wmstool-cascader-menu-item-expand"
          title="Jiangsu"
        >
          Jiangsu
        </li>
      </ul>
      <ul
        class="wmstool-cascader-menu"
      >
        <li
          class="wmstool-cascader-menu-item wmstool-cascader-menu-item-expand wmstool-cascader-menu-item-active"
          title="Hangzhou"
        >
          Hangzhou
        </li>
      </ul>
      <ul
        class="wmstool-cascader-menu"
      >
        <li
          class="wmstool-cascader-menu-item"
          title="West Lake"
        >
          West Lake
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected 3`] = `
<div>
  <div
    class="wmstool-cascader-menus  wmstool-cascader-menus-placement-bottomLeft  wmstool-cascader-menus-hidden"
  >
    <div>
      <ul
        class="wmstool-cascader-menu"
      >
        <li
          class="wmstool-cascader-menu-item wmstool-cascader-menu-item-expand wmstool-cascader-menu-item-active"
          title="Zhejiang"
        >
          Zhejiang
        </li>
        <li
          class="wmstool-cascader-menu-item wmstool-cascader-menu-item-expand"
          title="Jiangsu"
        >
          Jiangsu
        </li>
      </ul>
      <ul
        class="wmstool-cascader-menu"
      >
        <li
          class="wmstool-cascader-menu-item wmstool-cascader-menu-item-expand wmstool-cascader-menu-item-active"
          title="Hangzhou"
        >
          Hangzhou
        </li>
      </ul>
      <ul
        class="wmstool-cascader-menu"
      >
        <li
          class="wmstool-cascader-menu-item wmstool-cascader-menu-item-active"
          title="West Lake"
        >
          West Lake
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader popup correctly when panel is hidden 1`] = `
<div>
  <div
    class="wmstool-cascader-menus  wmstool-cascader-menus-empty wmstool-cascader-menus-placement-bottomLeft  wmstool-cascader-menus-hidden"
  >
    <div />
  </div>
</div>
`;

exports[`Cascader popup correctly when panel is open 1`] = `
<div>
  <div
    class="wmstool-cascader-menus  wmstool-cascader-menus-placement-bottomLeft "
  >
    <div>
      <ul
        class="wmstool-cascader-menu"
      >
        <li
          class="wmstool-cascader-menu-item wmstool-cascader-menu-item-expand"
          title="Zhejiang"
        >
          Zhejiang
        </li>
        <li
          class="wmstool-cascader-menu-item wmstool-cascader-menu-item-expand"
          title="Jiangsu"
        >
          Jiangsu
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader popup correctly with defaultValue 1`] = `
<div>
  <div
    class="wmstool-cascader-menus  wmstool-cascader-menus-placement-bottomLeft "
  >
    <div>
      <ul
        class="wmstool-cascader-menu"
      >
        <li
          class="wmstool-cascader-menu-item wmstool-cascader-menu-item-expand wmstool-cascader-menu-item-active"
          title="Zhejiang"
        >
          Zhejiang
        </li>
        <li
          class="wmstool-cascader-menu-item wmstool-cascader-menu-item-expand"
          title="Jiangsu"
        >
          Jiangsu
        </li>
      </ul>
      <ul
        class="wmstool-cascader-menu"
      >
        <li
          class="wmstool-cascader-menu-item wmstool-cascader-menu-item-expand wmstool-cascader-menu-item-active"
          title="Hangzhou"
        >
          Hangzhou
        </li>
      </ul>
      <ul
        class="wmstool-cascader-menu"
      >
        <li
          class="wmstool-cascader-menu-item"
          title="West Lake"
        >
          West Lake
        </li>
      </ul>
    </div>
  </div>
</div>
`;
